<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       android:id="@+id/et_one"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:id="@+id/et_two"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_two"
        android:id="@+id/btn_plus"
        android:layout_marginTop="10dp"
        android:text="Plus"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        android:id="@+id/tv_result"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Result"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:layout_marginTop="40dp"
        android:id="@+id/et_email"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:id="@+id/btn_check_email"
        android:layout_marginTop="10dp"
        android:text="Check Email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_check_email"
        android:layout_marginTop="40dp"
        android:id="@+id/et_number"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_number"
        android:id="@+id/btn_check_number"
        android:layout_marginTop="10dp"
        android:text="Check number"
        />

</androidx.constraintlayout.widget.ConstraintLayout>